test: setup firebase && re-enable test
