# doc/api.yml
@@ -12,10 +12,6 @@ info:
     name: Apache License 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0
 
-servers:
-  - url: http://localhost:3000/api/v1
-    description: Development Server
-
 tags:
   - name: Health
     description: Health check and monitoring endpoints for API status verification
@@ -62,6 +58,26 @@ paths:
 
         Returns immediately with a "pong" response.
       operationId: ping
+      tags:
+        - Health
+      security: []
+      responses:
+        '200':
+          description: Server is reachable
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PingResponse'
+              example:
+                message: pong
+  /health/secured/ping:
+    get:
+      summary: Ping Server
+      description: |
+        Simple ping endpoint to verify server connectivity and the authentification filter.
+
+        Returns immediately with a "pong" response.
+      operationId: securedPing
       tags:
         - Health
       security: []
