# src/main/java/com/anonymous/finoanaapi/controllers/HealthController.java
@@ -1,5 +1,8 @@
 package com.anonymous.finoanaapi.controllers;
 
+import static com.anonymous.finoanaapi.controllers.model.PingResponse.MessageEnum.PONG;
+
+import com.anonymous.finoanaapi.controllers.model.PingResponse;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -8,12 +11,16 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/health")
 public class HealthController {
   @GetMapping("/ping")
-  String ping() {
-    return "pong";
+  PingResponse ping() {
+    return pongResponse();
+  }
+
+  private static PingResponse pongResponse() {
+    return new PingResponse().message(PONG);
   }
 
   @GetMapping("/secured/ping")
-  String securedPing() {
-    return "pong";
+  PingResponse securedPing() {
+    return pongResponse();
   }
 }
